--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    /* width: 80%; */
-    height: 2000px;
+    width: 80%;
+/*     height: 2000px; */
 }
 
 header {
